[package]
name = "build-shaper-font"
description = "A minimal font compiler to produce 'shaper fonts', minimal fonts to feed to HarfBuzz."
repository = "https://github.com/fontra/build-shaper-font"
version = "0.1.0"
authors = ["Khaled Hosny <khaled@aliftype.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
fea-rs = { git = "https://github.com/khaledhosny/fontc", branch = "insert-markers" }
write-fonts = "0.44.1"

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]